apps/changedetection/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
  namespace: changedetection
spec:
  rules:
    - host: changedetection.home.legrandleo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  name: http
